# primitive_sdf

./: CMakeLists.txt  README.md  action.sh  binding.cpp  example.py  format.sh  primitive_sdf.hpp  setup.py  unittest.cpp  unittest.py
bench/: bench.cpp
python/: test.py  test_psdf.py  unittest.py
python/psdf/: __init__.py  __init__.pyi
